--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.2",
+    "js-cookie": "^3.0.1",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
