--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.2.8",
     "next": "12.1.1",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
