--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.2",
     "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.2.8",
     "next": "12.1.1",
