--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "mongoose": "^6.2.8",
     "next": "12.1.1",
     "next-connect": "^0.12.2",
+    "notistack": "^2.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.1"
   },
   "devDependencies": {
     "eslint": "8.12.0",
