--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.5.2",
+    "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
