--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-connect": "^0.12.2",
     "notistack": "^2.0.3",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1"
   },
