--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.29.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "multer": "^1.4.4",
     "next": "12.1.1",
     "next-connect": "^0.12.2",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.28.1"
+    "react-hook-form": "^7.28.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "8.12.0",
