--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
+    "@mui/lab": "^5.0.0-alpha.76",
     "@mui/material": "^5.5.2",
     "@paypal/react-paypal-js": "^7.6.0",
     "axios": "^0.26.1",
