--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.28.1",
     "react-material-ui-carousel": "^3.3.3",
+    "react-responsive-carousel": "^3.2.23",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
